Add APIs for sandbox (#49)
